--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </div>
       <div class="four">
         <div class="text-box">
-          <p class="hbd-chatbox">
+          <p class="hbd-chatbox" id="onl-txt">
           uwu p-pwease know dat dis valentine's day, my wove fow you is supaw dupaw big! You make my heawt skip a beat wit evwy smile and giggle. I f-feel so comfowtable and safe w-when I'm wif you, like a wittle bunny snuggled in a warm b-blanket.
           </p>
-          <p class="fake-btn">Send</p>
+          <p class="fake-btn" #onl-txt>Send</p>
         </div>
       </div>
       <div class="five">
